Resolved several issues with hiding/deleting questions. (1) Deleted questions are now at 20% opacity and have a red background so that accidental deletions are easier to undo. (2) Flag questions now correctly flag the specific type of question, not all questions that have similar id values. (3) The admin panel will now reflect changes made from the question control panel. (4)Like-ratings do not have to be the final type of question to be updated. (5) The rating page will also reflect the changes made in the question control panel. Ratings associated to questions are no longer misaligned and the final question correctly redirects to the confirmation page.

--- a/product/custom/css/style.css
+++ b/product/custom/css/style.css
@@ -79,7 +79,9 @@ body{
 
 /* Temp implementation */
 .enableDel{
-  opacity: 0;
+  border-radius: 4px;
+  opacity: 0.2;
+  box-shadow: 0 0 30px red;
 }
 
 @media( max-width: 990px ){
